--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,19 @@
 .container {
-  width: 1000px;
+  width: 1100px;
 }
-
+.smallContainer {
+  width: 800px;
+}
 body {
   background-color: black;
   color: white;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+.purple {
+  color: rgb(178, 167, 251);
+}
+.extra {
+  color: #747bff;
 }
