--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,7 @@
   height: 400px;
 }
 body {
+  font-family: "Roboto", sans-serif;
   background-color: black;
   color: white;
   margin: 0;
@@ -17,4 +18,12 @@ body {
 }
 .extra {
   color: #747bff;
+}
+
+.stylefont {
+  font-family: "Dancing Script", cursive;
+}
+a {
+  text-decoration: none;
+  color: white;
 }
