landing page update

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,3 +27,8 @@ a {
   text-decoration: none;
   color: white;
 }
+
+.new:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+  /* filter: drop-shadow(0 0 2em #61dafbaa); */
+}
