--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,8 +7,8 @@
 }
 body {
   font-family: "Roboto", sans-serif;
-  background-color: black;
-  color: white;
+  /* background-color: black; */
+  /* color: white; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -31,4 +31,16 @@ a {
 .new:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
   /* filter: drop-shadow(0 0 2em #61dafbaa); */
+}
+
+.card {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: sticky;
+  color: white;
+  background-color: black;
+  top: 0;
 }
